<resources>
    <string name="app_name">WorkoutTrackerToothbrook</string>
    <string name="title_activity_main">Workout Tracker</string>
    <string name="title_social">Social</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_tracker">Workout</string>
    <string name="workout_overview">Workout Overview</string>
    <string name="minutesworkedout">minutesworkedout</string>
    <string name="kilometerstraversed">KilometersTraversed</string>
    <string name="previousweek">previousWeek</string>
    <string name="kilometersprev">kilometersPrev</string>
    <string name="averagekilometers">averageKilometers</string>
    <string name="add_workout">Add Workout</string>
    <string name="workout_name">workout Name</string>
    <string name="workout_reps">Workout Reps</string>
    <string name="minutes">Minutes</string>
    <string name="add_workout_button">Add workout</string>
    <string name="number_of_minutes">number of minutes</string>
    <string name="personal">Personal</string>
    <string name="averageminutes">averageMinutes</string>
    <string name="settings">Settings</string>
    <string name="body_information">Edit Body Information</string>
    <string name="name">Name</string>
    <string name="height">Height(in cm)</string>
    <string name="weight">Weight(in Kg)</string>
    <string name="add_friend">Add Friend</string>
    <string name="options">Options</string>
    <string name="information">Status</string>
    <string name="weightinfo">Weight:</string>
    <string name="heightinfo">Height:</string>
    <string name="set_goal">Set Goal</string>
    <string name="kcal_burned_this_week">kcal burned this week:</string>
    <string name="your_bmi">Your BMI:</string>
    <string name="kcal_left_until_goal_reached">kcal left until goal reached:</string>
    <string name="kcal_burned_last_workout">kcal burned last workout:</string>
    <string name="km_left_until_goal_reached">Km left until goal reached:</string>
    <string name="see_workouts">See workouts</string>
    <string name="Addfriend">Add Friend</string>
    <string name="person">person</string>
    <string name="settingsinfo">settings</string>
    <string name="seeworkouts">seeworkouts</string>
    <string name="see_information">Check Progress</string>
    <string name="edit_body_information">Edit Body Information</string>
    <string name="idealweightinfo">Target weight:</string>
    <string name="friend_email_address">Friend Email address</string>
    <string name="target_weight">Target Weight</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="set_goaltitle">Set goal</string>
    <string name="target_km_for_week">Target Km for week</string>
    <string name="target_kcal">Target Kcal</string>
    <string name="no_goal_set">No goal set</string>
    <string name="no_settings">No Settings</string>
    <string name="workouts">Workouts</string>
    <string name="add">add</string>
    <string name="add_group">add group</string>
    <string name="find_group">Find group</string>
    <string name="add_groupButton">Add group</string>
    <string name="add_groupTitle">Add Group</string>
    <string name="Create_groupButton">Create group</string>
    <string name="groupmembers">GroupMembers</string>
    <string name="competition">Competition</string>
    <string name="there_s_no_current_competition">There is currently no competition</string>
    <string name="create_competition">Create a competition</string>
    <string name="register">Register new user</string>
    <string name="regemail">Enter your email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="don_t_have_a_user_register_here">Don\'t Have a User? Register here</string>
    <string name="logout">Log out</string>
    <string name="height_register">Height</string>
    <string name="weight_register">Weight</string>
    <string name="Last_week">"Last week: "</string>
    <string name="This_week">"This week: "</string>
    <string name="avg_distance">"Avg. Dist. : "</string>
    <string name="avg_minutes">"Avg. Time: "</string>
    <string name="hour">"H "</string>
    <string name="add_workout_type">Add Workout Type</string>
    <string name="noDate">No Data</string>
    <string name="glutebrigde">Glute bridge</string>
    <string name="lateralrise">Lateral rise</string>
    <string name="reverselunge">Reverse lunge</string>
    <string name="bicepcurl">Bicep curl</string>
    <string name="chestpress">Chest press</string>
    <string name="crunches">Crunches</string>
    <string name="overheadpress">Overhead press</string>
    <string name="plank">Plank</string>
    <string name="pushup">Push up</string>
    <string name="squat">Squat</string>
    <string name="superman">Superman</string>
    <string name="walkRun">Walk/Run</string>
    <string name="found">"FOUND: "</string>
    <string name="entergroupname">Enter your group name</string>
    <string name="createGroup">Create Group</string>
    <string name="nogroupFound">No group found</string>
    <string name="foundgroup">"FOUND: "</string>
    <string name="start_workout">Start workout</string>
    <string name="stop">Stop</string>
    <string name="time">Time: 0:0:0   Distance:</string>
    <string name="distance">"   Distance: "</string>
    <string name="timeTracker">"Time: "</string>
    <string name="workoutAdded">Workout added</string>
    <string name="workouttypeadded">Workout type added</string>
    <string name="reps">" Rep(s)"</string>
    <string name="kmWorkout" translatable="false">" Km"</string>
    <string name="end_competition">End competition</string>
    <string name="chooseCom">Choose Competition type</string>
    <string name="createComp">Create Competition</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="mostminutes">Most Minutes</string>
    <string name="mostkilometers">Most Kilometers</string>
    <string name="welcome_to">"Welcome to "</string>
</resources>