<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_social">

    <fragment
        android:id="@+id/navigation_social"
        android:name="com.example.workouttrackertoothbrook.ui.social.socialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.workouttrackertoothbrook.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_tracker"
        android:name="com.example.workouttrackertoothbrook.ui.tracker.trackerFragment"
        android:label="@string/title_tracker"
        tools:layout="@layout/fragment_tracker" />
</navigation>