<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.personal.bodyInformation">

    <TextView
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/nameOfUser"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <TextView
        android:text="@string/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/heightOfUser"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <TextView
        android:text="@string/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/weightOfUser"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />






</LinearLayout>