<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.personal.personalFragment"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/bodyLayout"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/imageBody"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:tint="@color/cardview_dark_background"
            android:src="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/person" />

        <TextView
            android:id="@+id/textBody"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="30sp"
            android:clickable="true"
            android:text="@string/body_information"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"

        android:clickable="true"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true">
        <ImageView
            android:id="@+id/imageSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_settings_24"
            android:contentDescription="@string/settingsinfo"
            app:tint="@color/cardview_dark_background" />
        <TextView
            android:id="@+id/TextSettings"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="30sp"
            android:clickable="true"
            android:text="@string/settings"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/friendLayout"
        android:layout_width="match_parent"
        android:clickable="true"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/addfriendImage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/ic_baseline_person_add_alt_1_24"
            android:focusable="true"
            android:contentDescription="@string/add_friend"
            app:tint="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/addFriendText"
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textSize="30sp"
            android:clickable="true"
            android:text="@string/add_friend"
            android:focusable="true" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/goalLayout"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/setGoalImage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/ic_baseline_outlined_flag_24"
            android:focusable="true"
            android:contentDescription="@string/Addfriend"
            app:tint="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/setGoalText"
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textSize="30sp"
            android:clickable="true"
            android:text="@string/set_goal"
            android:focusable="true" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/workoutLayout"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/seeWorkoutsImage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/ic_baseline_directions_run_24"
            android:focusable="true"
            android:contentDescription="@string/seeworkouts"
            app:tint="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/seeWorkoutsText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="6"
            android:textSize="30sp"
            android:clickable="true"
            android:text="@string/see_workouts"
            android:focusable="true" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/progressLayout"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true">

        <ImageView
            android:id="@+id/SeeinformationImage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/ic_baseline_psychology_24"
            android:focusable="true"
            android:contentDescription="@string/see_information"
            app:tint="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/seeinformationText"
            android:layout_width="50dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textSize="30sp"
            android:clickable="true"
            android:text="@string/see_information"
            android:focusable="true" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentpart"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>


